assignment/src/main/java/com/example/assignment/error/exception/ExceptionResponse.java
package com.example.assignment.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.ToString;

@Getter
@ToString
@AllArgsConstructor
public class ExceptionResponse {
    private final String message;
}
